# cuda-task

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  gitlab-ci.yml  plot.py  run_on_cluster.sh  update_cmake_cluster.sh
include/: CommonKernels.cuh  Filter.cuh  OnExit.h  ScalarMulRunner.cuh
runners/: 01-add.cu  05-scalar-mul.cu  08-filter.cu
src/: CommonKernels.cu  CosineVector.cu  Filter.cu  KernelAdd.cu  KernelMatrixAdd.cu  KernelMul.cu  MatrixMul.cu  MatrixVectorMul.cu  ScalarMul.cu  ScalarMulRunner.cu
